--- a/templates/base.templ
+++ b/templates/base.templ
@@ -9,7 +9,7 @@ templ Base() {
 			<title>blog</title>
 			<link href="/static/css/output.css" rel="stylesheet"/>
 			<link rel="icon" href="data:,"/>
-			<link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
+			<link rel="icon" type="image/x-icon" href="/static/me_icon.jpg"/>
 			<script src="/static/js/htmx.min.js"></script>
 			<script defer src="/static/js/alpine.min.js"></script>
 			<script src="https://js.stripe.com/v3/"></script>
