--- a/templates/base.templ
+++ b/templates/base.templ
@@ -6,7 +6,7 @@ templ Base() {
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-			<title>blog</title>
+			<title>Ilia's blog</title>
 			<link href="/static/css/output.css" rel="stylesheet"/>
 			<link rel="icon" href="data:,"/>
 			<link rel="icon" type="image/x-icon" href="/static/me_icon.jpg"/>
