feat: add new articles
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/landing_page.templ
+++ b/templates/views/landing_page.templ
@@ -31,6 +31,13 @@ templ LandingPage() {
                     	<div class="max-h-[400px] overflow-y-auto pr-2 custom-scroll w-full">
                     		<ul class="space-y-4">
                     			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
+                    			<li><a href="#" class="text-blue-600 hover:underline">Zero trust homelab</a> - 10.10.2025</li>
                     		</ul>
                     	</div>
                     </div>
