--- a/templates/views/landing_page.templ
+++ b/templates/views/landing_page.templ
@@ -9,11 +9,11 @@ templ LandingPage() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
             <nav class="w-full flex justify-center py-4 text-base-100">
                 <div class="flex gap-12">
-                    <a href="/articles" 
+                    <a href="/p/public/articles" 
                        class="text-xl font-bold hover:underline cursor-pointer">
                         Articles
                     </a>
-                    <a href="/projects" 
+                    <a href="/p/public/projects" 
                        class="text-xl font-bold hover:underline cursor-pointer">
                         Projects
                     </a>
