feat: add the option to redirct to the correct article
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/articles.templ
+++ b/templates/views/articles.templ
@@ -19,7 +19,7 @@ templ Articles() {
 						@button.Button(button.Props{
 							Href: "/p/public/landing-page",
 						}) {
-							Back to Home
+                            Go Back Home
 						}
 					</div>
 
