--- a/templates/views/projects.templ
+++ b/templates/views/projects.templ
@@ -41,7 +41,7 @@ templ Projects() {
 						@button.Button(button.Props{
 							Href: "/p/public/landing-page",
 						}) {
-							Back to Home
+                            Go Back Home
 						}
 					</div>
 
