--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -3,6 +3,7 @@ package views
 import (
 	"github.com/ip812/blog/articles"
 	"github.com/ip812/blog/templates"
+	"github.com/ip812/blog/templates/code"
 )
 
 var zeroTrustHomelabMetadata = articles.GetByID(articles.ZeroTrustHomelabID)
@@ -11,18 +12,39 @@ templ ArticleZeroTrustHomelab() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
-				<div class="w-1/2 space-y-8 py-12">
-                    <div class="flex flex-row items-baseline space-x-4">
-                        <h3 class="text-xl font-bold inline-block underline">
-                        	{zeroTrustHomelabMetadata.Name}  
-                        </h3>
-                    </div>
-                    <p class="text-gray-700 mt-2">
-                        {zeroTrustHomelabMetadata.Description}  
-                    </p>
+				<div class="w-1/2 space-y-8 py-12 font-medium">
+					<header class="flex flex-col w-full justify-center items-center mb-2">
+						<h1 class="text-3xl font-semibold leading-tight">{ zeroTrustHomelabMetadata.Name }</h1>
+					</header>
+					<p>
+						Some of the Terraform code snippets in this article are simplified for clarity.
+						Some of the Terraform code snippets in this article are simplified for clarity.
+					</p>
+					<div class="mt-6">
+						@code.Code(code.Props{
+							Language:       "go",
+							ShowCopyButton: true,
+							Size:           code.SizeSm,
+						}) {
+							{ 
+`resource "cloudflare_r2_bucket" "pg_backups_bucket" {
+    account_id = var.cf_account_id
+    name = "${var.org}-${var.env}-pg-backups-bucket"
+    location = "EEUR"
+    storage_class = "Standard"
+}` }
+						}
+					</div>
+					<p>
+						More explanatory text after the code snippet. Keep paragraphs short for easier reading.
+					</p>
+					<img class="w-full h-auto my-6" src="https://static.blog.ip812.com/zero-trust-homelab-overview.drawio.png" alt="Zero Trust Homelab overview"/>
+					<p>
+						Some of the Terraform code snippets in this article are simplified for clarity.
+						<a href="htps://github.com/ip812/zero-trust-homelab" class="underline text-blue-500">Here</a> you can find the video where I demonstrate how I add this blog application on which you are reading this article to my homelab.
+					</p>
 				</div>
 			</div>
-
 			@templates.Footer()
 		</div>
 	}
