--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -3,6 +3,7 @@ package views
 import (
 	"github.com/ip812/blog/articles"
 	"github.com/ip812/blog/templates"
+	"github.com/ip812/blog/templates/button"
 	"github.com/ip812/blog/templates/code"
 )
 
@@ -13,6 +14,14 @@ templ ArticleZeroTrustHomelab() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
 				<div class="w-1/2 space-y-8 py-12 font-medium">
+					<div class="mb-8 flex justify-center">
+						@button.Button(button.Props{
+							Href: "/p/public/landing-page",
+						}) {
+                            Go Back Home
+						}
+					</div>
+
 					<header class="flex flex-col w-full justify-center items-center mb-2">
 						<h1 class="text-3xl font-semibold leading-tight">{ zeroTrustHomelabMetadata.Name }</h1>
 					</header>
