fix: rewrite the last sentence zero trust homelab
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -50,7 +50,7 @@ templ ArticleZeroTrustHomelab() {
 					<img class="w-full h-auto my-6" src="https://static.blog.ip812.com/zero-trust-homelab-overview.drawio.png" alt="Zero Trust Homelab overview"/>
 					<p>
 						Some of the Terraform code snippets in this article are simplified for clarity.
-						<a href="https://www.youtube.com/watch?v=9ZkzPYZTazY" class="underline text-blue-500">Here</a> you can find the video where I demonstrate how I add this blog application on which you are reading this article to my homelab.
+						<a href="https://www.youtube.com/watch?v=9ZkzPYZTazY" class="underline text-blue-500">Here</a> you can find the video where I demonstrate how I add this blog application on which you are reading at the moment to my homelab.
 					</p>
 				</div>
 			</div>
