--- a/templates/base.templ
+++ b/templates/base.templ
@@ -21,7 +21,7 @@ templ Base() {
 		<body>
 			@Toast()
             @code.Script()
-			<div class="relative md:flex font-primary w-screen min-h-screen">
+			<div class="relative md:flex font-primary w-screen min-h-screen overflow-x-hidden">
 				{ children... }
 			</div>
 		</body>
