--- a/templates/views/article_zero_trust_homelab.templ
+++ b/templates/views/article_zero_trust_homelab.templ
@@ -14,7 +14,7 @@ templ ArticleZeroTrustHomelab() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
-				<div class="w-1/2 space-y-8 py-12 font-medium">
+				<div class="mx-auto w-4/5 md:w-1/2 space-y-8 py-12 font-medium">
 					<div class="mb-8 flex justify-center">
 						@button.Button(button.Props{
 							Href: "/p/public/landing-page",
