--- a/templates/views/projects.templ
+++ b/templates/views/projects.templ
@@ -36,7 +36,7 @@ templ Projects() {
 	@templates.Base() {
 		<div class="flex flex-col min-h-screen justify-between w-full">
 			<div class="flex flex-1 justify-center">
-				<div class="w-1/2 space-y-8 py-12">
+				<div class="mx-auto w-4/5 md:w-1/2 space-y-8 py-12">
 					<div class="mb-8 flex justify-center">
 						@button.Button(button.Props{
 							Href: "/p/public/landing-page",
