feat: add placeholder for article
Signed-off-by: Ilia Petrov <ilia.yavorov.petrov@gmail.com>

--- a/templates/base.templ
+++ b/templates/base.templ
@@ -23,7 +23,7 @@ templ Base() {
 			@Toast()
             @code.Script()
             @textarea.Script()
-			<div class="relative md:flex font-primary w-screen min-h-screen overflow-x-hidden">
+			<div class="relative md:flex font-primary w-screen min-h-screen">
 				{ children... }
 			</div>
 		</body>
